RESOLVED FIXED100352
[V8] ActiveDOMNodes no longer require a separate wrapper map
https://bugs.webkit.org/show_bug.cgi?id=100352
Summary [V8] ActiveDOMNodes no longer require a separate wrapper map
Adam Barth
Reported 2012-10-25 01:44:41 PDT
[V8] ActiveDOMNodes no longer require a separate wrapper map
Attachments
Not yet built or tested (9.62 KB, patch)
2012-10-25 01:46 PDT, Adam Barth
no flags
Adam Barth
Comment 1 2012-10-25 01:46:17 PDT
Created attachment 170589 [details] Not yet built or tested
Adam Barth
Comment 2 2012-10-25 01:47:26 PDT
I need to go to sleep, but I'm excited to have gotten this far tonight.
Adam Barth
Comment 3 2012-10-25 14:48:33 PDT
Comment on attachment 170589 [details] Not yet built or tested All the bubbles are green. I guess that means it builds and tests correctly. :)
Eric Seidel (no email)
Comment 4 2012-10-25 15:03:16 PDT
Comment on attachment 170589 [details] Not yet built or tested And how!
WebKit Review Bot
Comment 5 2012-10-25 15:34:29 PDT
Comment on attachment 170589 [details] Not yet built or tested Clearing flags on attachment: 170589 Committed r132540: <http://trac.webkit.org/changeset/132540>
WebKit Review Bot
Comment 6 2012-10-25 15:34:32 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.