[V8] ActiveDOMNodes no longer require a separate wrapper map https://bugs.webkit.org/show_bug.cgi?id=100352

Reviewed by Eric Seidel.

There is no longer any reason to keep a separate DOM wrapper map for
active DOM nodes. We can simply store them in the normal DOM node
wrapper map (which is more efficient because it doesn't use a HashMap).

* bindings/scripts/CodeGeneratorV8.pm:
(GetDomMapName):
* bindings/v8/DOMDataStore.cpp:
(WebCore::DOMDataStore::DOMDataStore):
(WebCore::DOMDataStore::~DOMDataStore):
(WebCore::DOMDataStore::reportMemoryUsage):
* bindings/v8/DOMDataStore.h:
(DOMDataStore):
* bindings/v8/IntrusiveDOMWrapperMap.h:
* bindings/v8/V8DOMMap.cpp:
* bindings/v8/V8DOMMap.h:
(WebCore):
* bindings/v8/V8DOMWrapper.cpp:
* bindings/v8/V8DOMWrapper.h:
(V8DOMWrapper):
(WebCore::V8DOMWrapper::getCachedWrapper):


Canonical link: https://commits.webkit.org/118454@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132540 268f45cc-cd09-0410-ab3c-d52691b4dbfc