Source/WebCore/bindings/v8/IntrusiveDOMWrapperMap.h
@@ -78,36 +78,6 @@ private:
     }
 };
 
-class ActiveDOMNodeWrapperMap : public DOMWrapperHashMap<Node> {
-public:
-    virtual v8::Persistent<v8::Object> get(Node* node) OVERRIDE
-    {
-        v8::Persistent<v8::Object> wrapper = node->wrapper();
-        ASSERT(DOMWrapperHashMap<Node>::get(node) == wrapper);
-        return wrapper;
-    }
-
-    virtual void set(Node* node, v8::Persistent<v8::Object> wrapper) OVERRIDE
-    {
-        ASSERT(node && node->wrapper().IsEmpty());
-        ASSERT(wrapper.WrapperClassId() == v8DOMSubtreeClassId);
-        node->setWrapper(wrapper);
-        DOMWrapperHashMap<Node>::set(node, wrapper);
-    }
-
-    virtual void clear() OVERRIDE
-    {
-        ASSERT_NOT_REACHED();
-    }
-
-    virtual void remove(Node* node, v8::Persistent<v8::Object> wrapper) OVERRIDE
-    {
-        ASSERT(node->wrapper() == wrapper);
-        node->clearWrapper();
-        DOMWrapperHashMap<Node>::remove(node, wrapper);
-    }
-};
-
 } // namespace WebCore
 
 #endif
