Source/WebCore/bindings/v8/V8DOMMap.h
@@ -43,7 +43,6 @@
 namespace WebCore {
 
     DOMWrapperMap<Node>& getDOMNodeMap(v8::Isolate* = 0);
-    DOMWrapperMap<Node>& getActiveDOMNodeMap(v8::Isolate* = 0);
 
     class NodeWrapperVisitor {
     public:
